--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script type="module" src="index.js"></script> -->
+    <script type="module" src="index.js"></script>
     <script type="module" src="gestion_produits.js"></script>
 </body>
 </html>
